сделал реализацию собственного LinkedList и исправил тест